AM_CXXFLAGS = @CXX_DEFAULTS@ @BASECFLAGS@ -I$(top_srcdir)/src
	
noinst_LIBRARIES = libaudio.a
libaudio_a_SOURCES = \
	audiobuffer.cpp \
	audiospec.cpp \
	mixerchannel.cpp \
	ring_buffer.cpp \
	vgm.cpp \
	wav.cpp

noinst_HEADERS = \
	audiobuffer.h \
	audiospec.h \
	mixerchannel.h \
	ring_buffer.h \
	vgm.h \
	wav.h