AM_CXXFLAGS = @CXX_DEFAULTS@ -I$(top_srcdir)/src @BASECFLAGS@
	
noinst_LIBRARIES = libaudio.a
libaudio_a_SOURCES = \
	audiobuffer.cpp \
	audiospec.cpp \
	convert.cpp \
	midi.cpp \
	mididev.cpp \
	mididev_alsa.cpp \
	mididev_win32.cpp \
	midifile.cpp \
	mixerchannel.cpp \
	soundfx.cpp \
	synth.cpp \
	vgm.cpp \
	wav.cpp \
	bs2b/bs2b.c \
	bs2b/bs2bclass.cpp \
	chorus/Chorus.cpp \
	chorus/Lfo.cpp \
	dsp/Biquad.cpp \
	dsp/Butterworth.cpp \
	dsp/Cascade.cpp \
	dsp/Filter.cpp \
	dsp/Param.cpp \
	dsp/PoleFilter.cpp \
	dsp/RootFinder.cpp

noinst_HEADERS = \
	audiobuffer.h \
	audiospec.h \
	convert.h \
	midi.h \
	mididev.h \
	mididev_alsa.h \
	mididev_win32.h \
	midifile.h \
	mixerchannel.h \
	mverb.h \
	soundfx.h \
	synth.h \
	vgm.h \
	wav.h \
	bs2b/bs2b.h \
	bs2b/bs2bclass.h \
	bs2b/bs2btypes.h \
	bs2b/bs2bversion.h \
	chorus/Chorus.h \
	chorus/ChorusEngine.h \
	chorus/DCBlock.h \
	chorus/Lfo.h \
	chorus/OnePoleLP.h \
	chorus/OscNoise.h \
	dsp/Biquad.h \
	dsp/Butterworth.h \
	dsp/Cascade.h \
	dsp/Common.h \
	dsp/Dsp.h \
	dsp/Filter.h \
	dsp/Layout.h \
	dsp/MathSupplement.h \
	dsp/Params.h \
	dsp/PoleFilter.h \
	dsp/RootFinder.h \
	dsp/State.h \
	dsp/Types.h \
	dsp/Utilities.h
