AM_CXXFLAGS = @CXX_DEFAULTS@ -I$(top_srcdir)/src @BASECFLAGS@
 

noinst_LIBRARIES = libgui.a
libgui_a_SOURCES = \
	gui.cpp \
	gui_opengl.cpp \
	gui_sdl2d.cpp \
	guifx.cpp \
	vector.cpp \
	matrix.cpp \
	keymap.cpp \
	rml/file_interface.cpp \
	rml/rend_interface.cpp \
	rml/rend_interface_opengl.cpp \
	rml/rend_interface_sdl2d.cpp \
	rml/sys_interface.cpp \
	format.cpp \
	window.cpp \
	windows/desktop.cpp \
	windows/interface.cpp \
	windows/screen_renderer_opengl.cpp \
	windows/screen_renderer_sdl2d.cpp \
	windows/normal_interface.cpp \
	windows/realistic_interface.cpp \
	windows/debugtools.cpp \
	windows/status.cpp \
	windows/sysdebugger.cpp \
	windows/sysdebugger286.cpp \
	windows/sysdebugger386.cpp \
	windows/stats.cpp \
	windows/devstatus.cpp \
	windows/mixerstate.cpp \
	windows/fileselect.cpp \
	capture/capture.cpp \
	capture/capture_imgseq.cpp \
	capture/capture_videofile.cpp \
	capture/avi.cpp \
	capture/videoencoder_bmp.cpp \
	capture/videoencoder_mpng.cpp \
	capture/videoencoder_zmbv.cpp

noinst_HEADERS = \
	gui.h \
	gui_opengl.h \
	gui_sdl2d.h \
	guifx.h \
	vector.h \
	vector.inl.h \
	matrix.h \
	matrix.inl.h \
	keymap.h \
	rml/file_interface.h \
	rml/rend_interface.h \
	rml/rend_interface_opengl.h \
	rml/rend_interface_sdl2d.h \
	rml/sys_interface.h \
	format.h \
	window.h \
	windows/desktop.h \
	windows/interface.h \
	windows/screen_renderer.h \
	windows/screen_renderer_opengl.h \
	windows/screen_renderer_sdl2d.h \
	windows/normal_interface.h \
	windows/realistic_interface.h \
	windows/debugtools.h \
	windows/status.h \
	windows/sysdebugger.h \
	windows/sysdebugger286.h \
	windows/sysdebugger386.h \
	windows/stats.h \
	windows/devstatus.h \
	windows/mixerstate.h \
	windows/fileselect.h \
	capture/capture.h \
	capture/capture_imgseq.h \
	capture/capture_videofile.h \
	capture/avi.h \
	capture/videoencoder.h \
	capture/videoencoder_bmp.h \
	capture/videoencoder_mpng.h \
	capture/videoencoder_zmbv.h
	