AM_CXXFLAGS = @CXX_DEFAULTS@ -I$(top_srcdir)/src @BASECFLAGS@
 

noinst_LIBRARIES = libgui.a
libgui_a_SOURCES = \
	opengl.cpp \
	gui.cpp \
	gui_opengl.cpp \
	gui_sdl2d.cpp \
	guifx.cpp \
	vector.cpp \
	matrix.cpp \
	keymap.cpp \
	shader_preset.cpp \
	shader_exception.cpp \
	gl_shader_pass.cpp \
	gl_shader_chain.cpp \
	gl_shader_program.cpp \
	gl_framebuffer.cpp \
	gl_texture.cpp \
	screen_renderer_opengl.cpp \
	screen_renderer_sdl2d.cpp \
	rml/file_interface.cpp \
	rml/rend_interface.cpp \
	rml/rend_interface_opengl.cpp \
	rml/rend_interface_sdl2d.cpp \
	rml/sys_interface.cpp \
	format.cpp \
	window.cpp \
	windows/audio_osd.cpp \
	windows/desktop.cpp \
	windows/interface.cpp \
	windows/interface_fx.cpp \
	windows/interface_screen.cpp \
	windows/items_dialog.cpp \
	windows/normal_interface.cpp \
	windows/realistic_interface.cpp \
	windows/debugtools.cpp \
	windows/status.cpp \
	windows/sysdebugger.cpp \
	windows/sysdebugger286.cpp \
	windows/sysdebugger386.cpp \
	windows/stats.cpp \
	windows/devstatus.cpp \
	windows/mixer_control.cpp \
	windows/mixer_save_info.cpp \
	windows/mixerstate.cpp \
	windows/fileselect.cpp \
	windows/state_dialog.cpp \
	windows/state_save.cpp \
	windows/state_save_info.cpp \
	windows/state_load.cpp \
	windows/message_wnd.cpp \
	windows/new_floppy.cpp \
	windows/printer_control.cpp \
	windows/shader_parameters.cpp \
	windows/shader_save_info.cpp \
	capture/capture.cpp \
	capture/capture_imgseq.cpp \
	capture/capture_videofile.cpp \
	capture/avi.cpp \
	capture/videoencoder_bmp.cpp \
	capture/videoencoder_mpng.cpp \
	capture/videoencoder_zmbv.cpp

noinst_HEADERS = \
	opengl.h \
	gui.h \
	gui_opengl.h \
	gui_sdl2d.h \
	guifx.h \
	vector.h \
	vector.inl.h \
	matrix.h \
	matrix.inl.h \
	keymap.h \
	shader_preset.h \
	shader_exception.h \
	gl_shader_pass.h \
	gl_shader_chain.h \
	gl_shader_program.h \
	gl_framebuffer.h \
	gl_texture.h \
	screen_renderer.h \
	screen_renderer_opengl.h \
	screen_renderer_sdl2d.h \
	rml/file_interface.h \
	rml/rend_interface.h \
	rml/rend_interface_opengl.h \
	rml/rend_interface_sdl2d.h \
	rml/sys_interface.h \
	format.h \
	window.h \
	windows/audio_osd.h \
	windows/desktop.h \
	windows/interface.h \
	windows/interface_fx.h \
	windows/interface_screen.cpp \
	windows/items_dialog.h \
	windows/normal_interface.h \
	windows/realistic_interface.h \
	windows/debugtools.h \
	windows/status.h \
	windows/sysdebugger.h \
	windows/sysdebugger286.h \
	windows/sysdebugger386.h \
	windows/stats.h \
	windows/devstatus.h \
	windows/mixer_control.h \
	windows/mixer_save_info.h \
	windows/mixerstate.h \
	windows/fileselect.h \
	windows/state_dialog.h \
	windows/state_save.h \
	windows/state_save_info.h \
	windows/state_load.h \
	windows/message_wnd.h \
	windows/new_floppy.h \
	windows/printer_control.h \
	windows/shader_parameters.h \
	windows/shader_save_info.h \
	capture/capture.h \
	capture/capture_imgseq.h \
	capture/capture_videofile.h \
	capture/avi.h \
	capture/videoencoder.h \
	capture/videoencoder_bmp.h \
	capture/videoencoder_mpng.h \
	capture/videoencoder_zmbv.h
	