AM_CXXFLAGS = @CXX_DEFAULTS@ @BASECFLAGS@ -I$(top_srcdir)/src
	
noinst_LIBRARIES = libhardware.a
libhardware_a_SOURCES = \
	cpu.cpp \
	cpu/core.cpp \
	cpu/bus.cpp \
	cpu/debugger/int_decoders.cpp \
	cpu/debugger/int_map.cpp \
	cpu/debugger/int_strings.cpp \
	cpu/decoder/cycles.cpp \
	cpu/decoder/prefix_none.cpp \
	cpu/decoder/prefix_none_32.cpp \
	cpu/decoder/prefix_0F.cpp \
	cpu/decoder/prefix_0F_32.cpp \
	cpu/decoder.cpp \
	cpu/executor.cpp \
	cpu/executor/opcodes.cpp \
	cpu/executor/access.cpp \
	cpu/executor/ctrlxfer.cpp \
	cpu/executor/flags.cpp \
	cpu/executor/interrupts.cpp \
	cpu/executor/memory.cpp \
	cpu/executor/modrm.cpp \
	cpu/executor/stack.cpp \
	cpu/executor/tasks.cpp \
	cpu/logger.cpp \
	cpu/disasm.cpp \
	cpu/debugger.cpp \
	cpu/mmu.cpp \
	memory.cpp \
	systemrom.cpp \
	iodevice.cpp \
	devices.cpp \
	devices/systemboard.cpp \
	devices/systemboard_ps1_2011.cpp \
	devices/systemboard_ps1_2121.cpp \
	devices/keyboard.cpp \
	devices/scancodes.cpp \
	devices/pic.cpp \
	devices/cmos.cpp \
	devices/dma.cpp \
	devices/pit.cpp \
	devices/pit82c54.cpp \
	devices/vga.cpp \
	devices/vga_genregs.cpp \
	devices/vga_crtc.cpp \
	devices/vga_sequencer.cpp \
	devices/vga_attrctrl.cpp \
	devices/vga_gfxctrl.cpp \
	devices/vga_dac.cpp \
	devices/vgadisplay.cpp \
	devices/drivefx.cpp \
	devices/floppy.cpp \
	devices/floppyfx.cpp \
	devices/storagectrl.cpp \
	devices/storagectrl_ps1.cpp \
	devices/storagectrl_ata.cpp \
	devices/storagedev.cpp \
	devices/hdd.cpp \
	devices/harddrvfx.cpp \
	devices/mediaimage.cpp \
	devices/serial.cpp \
	devices/parallel.cpp \
	devices/pcspeaker.cpp \
	devices/ps1audio.cpp \
	devices/sn76496.cpp \
	devices/gameport.cpp \
	devices/opl.cpp \
	devices/adlib.cpp \
	devices/cf62011bpc.cpp \
	devices/sblaster.cpp \
	devices/mpu401.cpp

noinst_HEADERS = \
	cpu.h \
	cpu/state.h \
	cpu/core.h \
	cpu/bus.h \
	cpu/decoder.h \
	cpu/descriptor.h \
	cpu/selector.h \
	cpu/executor.h \
	cpu/exception.h \
	cpu/logger.h \
	cpu/disasm.h \
	cpu/debugger.h \
	cpu/mmu.h \
	memory.h \
	systemrom.h \
	iodevice.h \
	devices.h \
	devices/systemboard.h \
	devices/systemboard_ps1_2011.h \
	devices/systemboard_ps1_2121.h \
	devices/keyboard.h \
	devices/scancodes.h \
	devices/pic.h \
	devices/cmos.h \
	devices/dma.h \
	devices/pit.h \
	devices/pit82c54.h \
	devices/vga_attrctrl.h \
	devices/vga_crtc.h \
	devices/vga_dac.h \
	devices/vga_genregs.h \
	devices/vga_gfxctrl.h \
	devices/vga.h \
	devices/vgadisplay.h \
	devices/drivefx.h \
	devices/floppy.h \
	devices/floppyfx.h \
	devices/storagectrl.h \
	devices/storagectrl_ps1.h \
	devices/storagectrl_ata.h \
	devices/storagedev.h \
	devices/hdd.h \
	devices/harddrvfx.h \
	devices/hddparams.h \
	devices/mediaimage.h \
	devices/serial.h \
	devices/parallel.h \
	devices/pcspeaker.h \
	devices/ps1audio.h \
	devices/sn76496.h \
	devices/gameport.h \
	devices/opl.h \
	devices/adlib.h \
	devices/cf62011bpc.h \
	devices/sblaster.h \
	devices/mpu401.h
