AM_CXXFLAGS = @CXX_DEFAULTS@ -I$(top_srcdir)/src @BASECFLAGS@
	
noinst_LIBRARIES = libhardware.a
libhardware_a_SOURCES = \
	cpu.cpp \
	cpu/core.cpp \
	cpu/bus.cpp \
	cpu/debugger/int_decoders.cpp \
	cpu/debugger/int_map.cpp \
	cpu/debugger/int_strings.cpp \
	cpu/decoder/cycles.cpp \
	cpu/decoder/prefix_none.cpp \
	cpu/decoder/prefix_none_32.cpp \
	cpu/decoder/prefix_0F.cpp \
	cpu/decoder/prefix_0F_32.cpp \
	cpu/decoder.cpp \
	cpu/executor.cpp \
	cpu/executor/opcodes.cpp \
	cpu/executor/access.cpp \
	cpu/executor/ctrlxfer.cpp \
	cpu/executor/flags.cpp \
	cpu/executor/interrupts.cpp \
	cpu/executor/memory.cpp \
	cpu/executor/modrm.cpp \
	cpu/executor/stack.cpp \
	cpu/executor/tasks.cpp \
	cpu/logger.cpp \
	cpu/disasm.cpp \
	cpu/debugger.cpp \
	cpu/mmu.cpp \
	memory.cpp \
	systemrom.cpp \
	iodevice.cpp \
	devices.cpp \
	devices/systemboard.cpp \
	devices/systemboard_ps1_2011.cpp \
	devices/systemboard_ps1_2121.cpp \
	devices/keyboard.cpp \
	devices/scancodes.cpp \
	devices/pic.cpp \
	devices/cmos.cpp \
	devices/dma.cpp \
	devices/pit.cpp \
	devices/vga.cpp \
	devices/vga_genregs.cpp \
	devices/vga_crtc.cpp \
	devices/vga_sequencer.cpp \
	devices/vga_attrctrl.cpp \
	devices/vga_gfxctrl.cpp \
	devices/vga_dac.cpp \
	devices/vgadisplay.cpp \
	devices/drivefx.cpp \
	devices/floppyctrl.cpp \
	devices/floppyctrl_raw.cpp \
	devices/floppyctrl_flux.cpp \
	devices/floppydisk.cpp \
	devices/floppydisk_raw.cpp \
	devices/floppydrive.cpp \
	devices/floppyfmt.cpp \
	devices/floppyfmt_img.cpp \
	devices/floppyfmt_hfe.cpp \
	devices/floppyfmt_ipf.cpp \
	devices/floppyfmt_td0.cpp \
	devices/floppyfmt_imd.cpp \
	devices/floppyfx.cpp \
	devices/floppyloader.cpp \
	devices/storagectrl.cpp \
	devices/storagectrl_ps1.cpp \
	devices/storagectrl_ata.cpp \
	devices/storagedev.cpp \
	devices/hdd.cpp \
	devices/harddrvfx.cpp \
	devices/mediaimage.cpp \
	devices/netservice.cpp \
	devices/serial.cpp \
	devices/serialmodem.cpp \
	devices/serialmodemfx.cpp \
	devices/parallel.cpp \
	devices/pcspeaker.cpp \
	devices/ps1audio.cpp \
	devices/sn76496.cpp \
	devices/gameport.cpp \
	devices/opl.cpp \
	devices/opl3.c \
	devices/adlib.cpp \
	devices/cf62011bpc.cpp \
	devices/sblaster.cpp \
	devices/mpu401.cpp \
	devices/cdrom_drive.cpp \
	devices/cdrom_disc.cpp \
	devices/cdrom_loader.cpp \
	devices/cdrom_fx.cpp \
	printer/mps_chargen.cpp \
	printer/mps_charset.cpp \
	printer/mps_printer.cpp \
	printer/mps_printer_epson.cpp \
	printer/mps_printer_ibmgp.cpp \
	printer/mps_printer_ibmpp.cpp

noinst_HEADERS = \
	cpu.h \
	cpu/state.h \
	cpu/core.h \
	cpu/bus.h \
	cpu/decoder.h \
	cpu/descriptor.h \
	cpu/selector.h \
	cpu/executor.h \
	cpu/executor_fn.h \
	cpu/exception.h \
	cpu/logger.h \
	cpu/disasm.h \
	cpu/debugger.h \
	cpu/mmu.h \
	memory.h \
	systemrom.h \
	iodevice.h \
	devices.h \
	devices/systemboard.h \
	devices/systemboard_ps1_2011.h \
	devices/systemboard_ps1_2121.h \
	devices/keyboard.h \
	devices/scancodes.h \
	devices/pic.h \
	devices/cmos.h \
	devices/dma.h \
	devices/pit.h \
	devices/vga_attrctrl.h \
	devices/vga_crtc.h \
	devices/vga_dac.h \
	devices/vga_genregs.h \
	devices/vga_gfxctrl.h \
	devices/vga.h \
	devices/vgadisplay.h \
	devices/drivefx.h \
	devices/floppyctrl.h \
	devices/floppyctrl_raw.h \
	devices/floppyctrl_flux.h \
	devices/floppydisk.h \
	devices/floppydisk_raw.h \
	devices/floppydrive.h \
	devices/floppyfmt.h \
	devices/floppyfmt_img.h \
	devices/floppyfmt_hfe.h \
	devices/floppyfmt_ipf.h \
	devices/floppyfmt_td0.h \
	devices/floppyfmt_imd.h \
	devices/floppyfx.h \
	devices/floppyloader.h \
	devices/floppyevents.h \
	devices/storagectrl.h \
	devices/storagectrl_ps1.h \
	devices/storagectrl_ata.h \
	devices/storagedev.h \
	devices/hdd.h \
	devices/harddrvfx.h \
	devices/hddparams.h \
	devices/mediaimage.h \
	devices/netservice.h \
	devices/serial.h \
	devices/serialmodem.h \
	devices/serialmodemfx.h \
	devices/parallel.h \
	devices/pcspeaker.h \
	devices/ps1audio.h \
	devices/sn76496.h \
	devices/gameport.h \
	devices/opl.h \
	devices/opl3.h \
	devices/adlib.h \
	devices/cf62011bpc.h \
	devices/sblaster.h \
	devices/mpu401.h \
	devices/cdrom_drive.h \
	devices/cdrom_disc.h \
	devices/cdrom_loader.h \
	devices/cdrom_events.h \
	devices/cdrom_fx.h \
	printer/mps_printer.h
